--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": "Development Connection String"
+  "AllowedHosts": "*"
 }
